# curve_speed_planning

./: CMakeLists.txt  README.md  package.xml
include/: curve_speed.h  curve_speed_planning.h
include/curve_speed_planning/: curve_speed_planning copy.h  curve_speed_planning.h
src/: curve_speed_planning copy 2.cpp  curve_speed_planning copy.cpp  curve_speed_planning.cpp  curve_speed_planning_node.cpp  longitudinal_control_node.cpp
src/fake_path_publisher/: CMakeLists.txt  fake_path_publisher.cpp
src/fake_path_publisher/waypoints/: route0_cw.csv  route1_ccw.csv  route2_ccw.csv  route3_cw.csv  route4_ccw.csv  route5_cw.csv  route6_ccw.csv  route_all.csv
